--- a/test/src/main/resources/application.yml
+++ b/test/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+jwt:
+  secret: 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
+  lifetime: 1m
 spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:test_db}
@@ -12,5 +15,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: ${JPA_SHOW_SQL:true}
-
-    
+  main:
+    allow-circular-references: true
